--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -2,10 +2,10 @@
 
     <div class="signersbox">
         <div class="allsigners">
-
-            All signers in city: {{city}}
-
+            All signers in city:
+            {{city}}
         </div>
+
             {{#cities}}
                {{#if url}}
                <div class="signers">
@@ -26,7 +26,6 @@
                        </div>
                     </div>
                {{/if}}
-
             {{/cities}}
 
     </div>
