--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -78,8 +78,8 @@
 
         {{/if}}
 
-    <script src="script.js"></script>
-</body>
-
+    </body>
+    
+    <script src="/script.js"></script>
 
 </html>
