--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,13 +28,13 @@
                </div>
                <div class="flex">
                    <div class="inheader">
-                       <a href="/edit" class="headerlinks">EDIT PROFILE</a>
+                       <a href="/edit" id="edit" class="headerlinks">EDIT PROFILE</a>
                    </div>
                    <div class="inheader">
-                       <a href="/signers" class="headerlinks">SIGNERS</a>
+                       <a href="/signers" id="signers" class="headerlinks">SIGNERS</a>
                    </div>
                    <div class="inheader">
-                       <a href="/thanks" class="headerlinks">THANKS</a>
+                       <a href="/thanks" id="thanks" class="headerlinks">THANKS</a>
                    </div>
                    <div class="inheader">
                        <a href="/logout" class="headerlinks">LOGOUT</a>
@@ -79,7 +79,7 @@
         {{/if}}
 
     </body>
-    
+
     <script src="/script.js"></script>
 
 </html>
