--- a/public/styles.css
+++ b/public/styles.css
@@ -77,6 +77,10 @@ a {
     /* border: 2px solid pink; */
 }
 
+.underline {
+    text-decoration: underline;
+}
+
 .inheader {
     display: flex;
     width: 120px;
