--- a/public/styles.css
+++ b/public/styles.css
@@ -10,10 +10,6 @@ body {
     overflow-x: hidden;
 }
 
-/* img {
-    width: 50%;
-} */
-
 canvas {
     -webkit-box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
     -moz-box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
@@ -42,40 +38,16 @@ a {
     background-color: rgb(255, 255, 255, 0.4);
 }
 
-.text {
-    font-size: 13px;
-}
 
-/* .textmargin {
-    font-size: 13px;
-    margin-bottom: 10px;
-} */
-/* MAIN */
-/* .container {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
-} */
-.petitiontext {
-    border: solid 3px black;
-    width: 100%;
-    height: 30vh;
-    /* color: #effcef; */
-}
+
 /* Header ////////////////////////////////////////////////////////////////////*/
 .header {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    /* margin-top: 30px; */
-    /* padding-right: 30px; */
     margin-bottom: 20px;
     height: 95px;
-    /* background-color: rgb(0, 0, 0, 0.3); */
-    /* height: 50px; */
-    /* border: 2px solid pink; */
-}
+-}
 
 .underline {
     text-decoration: underline;
@@ -86,7 +58,6 @@ a {
     width: 120px;
     justify-content: center;
     align-items: center;
-    /* border: 2px solid green; */
 }
 
 .flexleft {
@@ -94,28 +65,20 @@ a {
     justify-content: flex-start;
     align-items: center;
     width: 20%;
-    /* border: 2px solid pink; */
 }
 .flex {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     width: 79%;
-    /* border: 2px solid pink; */
 }
 
 .logoinheader {
-    /* width: 100px;
-    height: 100px; */
     height: 90%;
-    /* left: 100px; */
-    /* width: 80%; */
     margin-top: 10px;
 }
 .headerlinks {
     color: white;
-    /* font-weight: bold; */
-    /* border: 2px solid yellow; */
     font-size: 15px;
 }
 
@@ -134,7 +97,6 @@ a {
     height: 100vh;
     width: 50%;
     top: 0px;
-    /* background: black; */
     background-color: rgb(0, 0, 0, 0.9);
     z-index: 10;
     transition: 2s;
@@ -166,7 +128,6 @@ a {
     left: 0px;
     right: 0px;
     bottom: 0px;
-    /* background: pink; */
 }
 
 .zindex {
@@ -178,7 +139,6 @@ a {
 .wrapper {
     width: 100vw;
     height: 100vh;
-    /* border: 2px solid blue; */
     background: url("./images/background1.jpg");
     background-size: cover;
     display: flex;
@@ -186,16 +146,10 @@ a {
     align-items: center;
     overflow-y: scroll;
 }
-/* // Register containers */
 
-/* .mobileoverlay {
-
-} */
 
 .gridcontainer {
     position: relative;
-    /* width: 300px;
-    height: 300px; */
     display: grid;
     grid-template-columns: 400px;
     grid-template-rows: auto;
@@ -206,17 +160,14 @@ a {
     margin-top: 50px;
     margin-bottom: 20px;
     background-color: rgb(0, 0, 0, 0.4);
-    /* border: 2px solid purple; */
 }
 .treelogocontainer {
     grid-area: treelogocontainer;
-    /* border: 2px solid pink; */
     display: flex;
     justify-content: center;
 }
 .descriptioncontainer {
     grid-area: descriptioncontainer;
-    /* border: 2px solid red; */
     color: white;
     padding-left: 20px;
     padding-right: 20px;
@@ -231,7 +182,6 @@ a {
 
 .inputscontainer {
     grid-area: inputscontainer;
-    /* border: 2px solid green; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -253,7 +203,6 @@ a {
 }
 input {
     background-color: rgb(0, 0, 0, 0.5);
-    /* background-color: rgb(255, 255, 255, 0.2); */
     color: white;
     border: 2px solid transparent;
     border-radius: 4px;
@@ -262,7 +211,6 @@ input {
     margin: 5px;
 }
 input::placeholder {
-    /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: white;
     color: rgb(255, 255, 255, 0.7);
 }
@@ -317,13 +265,8 @@ input::placeholder {
     width: 100vw;
     height: 100vh;
     position: relative;
-    /* border: 2px solid blue; */
     background: url("./images/background1.jpg");
     background-size: cover;
-    /* display: flex; */
-    /* justify-content: center;intextbi
-    align-items: center; */
-    /* flex-direction: column; */
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -331,7 +274,6 @@ input::placeholder {
 .petitioncontainer {
     width: 100%;
     min-height: 90vh;
-    /* border: 2px solid blue; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -339,7 +281,6 @@ input::placeholder {
 }
 
 .intextbig {
-    /* border: 2px solid yellow; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -359,13 +300,11 @@ input::placeholder {
     color: white;
     margin: 20px;
     flex-direction: column;
-    /* width: 280px; */
 }
 
 .user {
     width: 100%;
     font-weight: bold;
-    /* margin-bottom: 5px; */
     color: white;
 }
 /* //////////////////////////////////////////////////////////////////////////////// */
@@ -375,10 +314,7 @@ input::placeholder {
     justify-content: center;
     align-items: center;
 }
-.firstlast {
-    font-size: 30px;
-    margin-bottom: 3px;
-}
+
 .canvas {
     margin-top: 7px;
     display: flex;
@@ -402,14 +338,6 @@ input::placeholder {
 }
 /* ////////////////////////////////////////////////////////////////////////// */
 /* EDIT */
-.inputdesc {
-    font-size: 13px;
-    color: white;
-    font-weight: bold;
-    margin-top: 10px;
-    text-align: center;
-}
-
 .signcontainer {
     display: flex;
     justify-content: center;
