cleaning css file

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,7 +18,7 @@
     <form method="POST">
         <div class="inputs">
             <div class="input">
-                <input type="text" name='email' placeholder='Email Adress' autocomplete='off'>
+                <input type="email" name='email' placeholder='Email Adress' autocomplete='off'>
             </div>
             <div class="input">
                 <input type="password" name='password' placeholder='Password' autocomplete='off'>
