--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -26,7 +26,7 @@
                 <input type="text" name='last' placeholder='Last Name' autocomplete='off'>
             </div>
             <div class="input">
-                <input type="text" name='email' placeholder='Email Adress' autocomplete='off'>
+                <input type="email" name='email' placeholder='Email Adress' autocomplete='off'>
             </div>
             <div class="input">
                 <input type="password" name='password' placeholder='Password' autocomplete='off'>
