--- a/public/styles.css
+++ b/public/styles.css
@@ -165,6 +165,7 @@ a {
     grid-area: treelogocontainer;
     display: flex;
     justify-content: center;
+    border: 2px solid yellow;
 }
 .descriptioncontainer {
     grid-area: descriptioncontainer;
@@ -178,6 +179,7 @@ a {
     flex-direction: column;
     text-align: center;
     font-size: 18px;
+    border: 2px solid blue;
 }
 
 .inputscontainer {
